--- a/nextflow.config
+++ b/nextflow.config
@@ -1,1 +1,49 @@
-config/nextflow.config
+manifest {
+	name = 'BAM2FASTX'
+	author = 'Guillermo A.R. Piccoli'
+	homePage = 'https://www.epicsolutions.cl'
+	description = 'Pipeline for HiFi Genetic Analises'
+	version = '1.0.0'
+}
+
+executor{
+    jobName = { "$task.tag" }
+}
+
+singularity {
+	enabled = true
+	autoMounts = true
+	cacheDir = "work/singularity"
+}
+
+params {
+    outdir = "output"
+	bio = "quay.io/biocontainers"
+    f = "q"
+    o_i = "$outdir/indexes"
+    o_ref = "$outdir/fastas"
+    mem = 10.GB
+    cpus = 2
+    pbbam_con = "$bio/pbbam:1.6.0--h5b7e6e0_0"
+    bam2fastx_con = "$bio/bam2fastx:1.3.0--he1c1bb9_8"
+}
+
+process{
+    memory = $params.mem
+    cpus = $params.cpus
+}
+
+profiles {
+	local {
+		process{
+			executor = 'local'
+		}
+	}
+    rapoi {
+		process {
+			executor = 'slurm'
+            time = '1h'
+            queue = 'quicktest'
+		}
+	}
+}
