--- a/nextflow.config
+++ b/nextflow.config
@@ -22,15 +22,13 @@ params {
     f = "q"
     o_i = "$outdir/indexes"
     o_ref = "$outdir/fastas"
-    mem = 10.GB
-    cpus = 2
     pbbam_con = "$bio/pbbam:1.6.0--h5b7e6e0_0"
     bam2fastx_con = "$bio/bam2fastx:1.3.0--he1c1bb9_8"
 }
 
 process{
-    memory = $params.mem
-    cpus = $params.cpus
+    memory = 10.GB
+    cpus = 2
 }
 
 profiles {
