--- a/nextflow.config
+++ b/nextflow.config
@@ -17,31 +17,32 @@ singularity {
 }
 
 params {
+	//arguments
+	o_f = "q"
+
+	//output directory
     outdir = "output"
-	bio = "quay.io/biocontainers"
-    f = "q"
+	//out folder index
     o_i = "$outdir/indexes"
-    o_ref = "$outdir/fastas"
-    pbbam_con = "$bio/pbbam:1.6.0--h5b7e6e0_0"
-    bam2fastx_con = "$bio/bam2fastx:1.3.0--he1c1bb9_8"
-}
+	//out folder references
+    o_fx = "$outdir/fastxs"
 
-process{
-    memory = 1.GB
-    cpus = 2
-}
+	//max memory 2G per processor
+	m = "1.GB"
+	//max cpus
+	p = "2"
 
-profiles {
-	standard {
-		process{
-			executor = 'local'
-		}
-	}
-    rapoi {
-		process {
-			executor = 'slurm'
-            time = '1h'
-            queue = 'quicktest'
-		}
-	}
+	//container prefix
+	bio = "quay.io/biocontainers"
+	//container pbbam
+    c_pbbam = "$bio/pbbam:1.6.0--h5b7e6e0_0"
+	//container bam2fastx
+    c_bam2fastx = "$bio/bam2fastx:1.3.0--he1c1bb9_8"
+
+	//executor
+	e = "local"
+	//queue name
+	q = "quicktest"
+	//max time
+	t = "1h"
 }
